--- a/index.html
+++ b/index.html
@@ -4,169 +4,188 @@
   <meta charset="UTF-8" />
   <title>Signal Sync</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
+      background: black;
+      color: white;
+      font-family: 'Press Start 2P', monospace;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+    }
+    #narration {
+      position: fixed;
+      top: 28px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 12px;
+      color: #ffe066;
+      background: transparent;
+      border: none;
+      text-align: center;
+      letter-spacing: 0.03em;
+      text-shadow: 0 1px 0 #222;
+      font-family: 'Press Start 2P', monospace;
+      white-space: pre-line;
+      pointer-events: none;
+      user-select: none;
+      z-index: 1001;
+      width: 98vw;
+      max-width: 520px;
+      min-height: 36px;
+      line-height: 1.4;
+      margin-bottom: 0;
+    }
+    #skipBtn {
+      position: fixed;
+      top: 28px;
+      right: 32px;
       background: #111;
+      border: 2px solid #fff;
       color: #fff;
       font-family: 'Press Start 2P', monospace;
-      width: 100vw;
-      min-height: 100vh;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      font-size: 12px;
+      padding: 6px 20px;
+      cursor: pointer;
+      border-radius: 0;
+      transition: background 0.2s, color 0.2s;
+      z-index: 1002;
+      text-shadow: 0 1px 0 #000;
+      display: block;
+      letter-spacing: 0.04em;
     }
-    #centerer {
-      min-height: 100vh;
-      min-width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-    #uiContainer {
-      background: #181818;
-      border: 3px solid #fff;
-      border-radius: 6px;
-      box-shadow: 0 0 0 6px #000;
-      padding: 22px 18px 24px 18px;
-      min-width: 300px;
-      max-width: 97vw;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      position: relative;
+    #skipBtn:hover {
+      background: #fff;
+      color: #111;
     }
     canvas {
       image-rendering: pixelated;
       background: #111;
       display: block;
-      margin: 18px auto 6px auto;
-      border: 2px solid #fff;
-      border-radius: 3px;
-      box-shadow: 0 0 6px #000;
-    }
-    #round {
-      color: #ffe066;
-      font-size: 10px;
-      margin-bottom: 10px;
-      text-align: center;
-      text-shadow: 0 0 2px #222;
-      letter-spacing: 0.5px;
+      margin: 20px auto;
+      border: 3px solid white;
     }
     #instruction {
-      font-size: 9px;
+      font-size: 10px;
+      margin-top: 10px;
       color: #87cefa;
       text-align: center;
-      margin-bottom: 8px;
-      margin-top: 2px;
-      letter-spacing: 0.3px;
-      text-shadow: 0 1px 0 #111;
+      font-family: 'Press Start 2P', monospace;
     }
-    #errorMessage, #finalMessage {
+    #round {
+      color: #ffeb3b;
+      font-size: 10px;
+      margin-top: 20px;
+      font-family: 'Press Start 2P', monospace;
+    }
+    #finalMessage,  #errorMessage {
       display: none;
       font-size: 10px;
-      margin-top: 16px;
-      max-width: 82%;
+      margin-top: 30px;
+      max-width: 80%;
       text-align: center;
       white-space: pre-wrap;
-      color: #ffe066;
-      line-height: 2;
+      color: #ffeb3b;
+      line-height: 1.8;
       font-family: 'Press Start 2P', monospace;
-      letter-spacing: 0.06em;
+    }
+    #finalMessage {
+      color: #ffeb3b;
     }
     #errorMessage {
       color: #ff4d4d;
-      text-shadow: 0 0 1px #222;
-    }
-    #finalMessage {
-      color: #ffe066;
-      text-shadow: 0 0 2px #000, 0 0 8px #ffe06644;
     }
     #overlay {
       position: fixed;
       top: 0; left: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.95);
+      background: rgba(0, 0, 0, 0.8);
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
+      padding-top: 420px;  /* adjust this value as needed */
       z-index: 1000;
       user-select: none;
-      pointer-events: auto;
-      transition: background 0.3s;
     }
     #startButton {
-      background: #111;
-      border: 2px solid #fff;
-      color: #fff;
+      background: #222;
+      border: 3px solid #87cefa;
+      color: #87cefa;
       font-family: 'Press Start 2P', monospace;
-      font-size: 13px;
-      padding: 8px 25px;
+      font-size: 14px;
+      padding: 10px 25px;
       cursor: pointer;
-      border-radius: 0;
-      transition: background 0.2s, color 0.2s;
-      margin: 0 auto;
-      box-shadow: 0 0 0 3px #000;
-      display: block;
-      letter-spacing: 0.05em;
-      text-shadow: 0 1px 0 #000;
+      transition: background 0.3s, color 0.3s;
     }
     #startButton:hover {
-      background: #fff;
-      color: #111;
-    }
-    #skipBtn {
-      position: fixed;
-      top: 18px;
-      right: 22px;
-      background: #111;
-      border: 2px solid #fff;
-      color: #fff;
-      font-family: 'Press Start 2P', monospace;
-      font-size: 11px;
-      padding: 4px 15px;
-      cursor: pointer;
-      border-radius: 0;
-      transition: background 0.2s, color 0.2s;
-      z-index: 2001;
-      text-shadow: 0 1px 0 #000;
-      display: none;
-    }
-    #skipBtn:hover {
-      background: #fff;
-      color: #111;
+      background: #87cefa;
+      color: #222;
     }
     @media (max-width: 520px) {
-      #uiContainer { padding: 8vw 2vw 8vw 2vw; min-width: 0; max-width: 99vw;}
-      canvas { width: 92vw !important; min-width: unset; }
-      #skipBtn { top: 8px; right: 8px; font-size: 9px; padding: 3px 9px; }
+      #narration {
+        font-size: 10px;
+        max-width: 99vw;
+        padding-left: 2vw; padding-right: 2vw;
+      }
+      #skipBtn {
+        font-size: 10px;
+        padding: 4px 10px;
+        right: 10px;
+        top: 10px;
+      }
+      canvas {
+        width: 95vw !important;
+        min-width: unset;
+      }
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <button id="skipBtn" title="Skip the game">Skip</button>
-  <div id="centerer">
-    <div id="uiContainer">
-      <div id="round">Round 1 / 4</div>
-      <div id="instruction">Press SPACE when the arrow hits the middle bar!</div>
-      <canvas id="game" width="400" height="100"></canvas>
-      <div id="errorMessage"></div>
-      <div id="finalMessage"></div>
-    </div>
-  </div>
+  <div id="narration"></div>
+  <button id="skipBtn" title="Skip">Skip</button>
+  <canvas id="game" width="400" height="100"></canvas>
+  <div id="round">Round 1 / 3</div>
+  <div id="instruction">Press SPACE when the arrow hits the middle bar!</div>
+  <div id="errorMessage"></div>
+  <div id="finalMessage"></div>
   <div id="overlay">
     <button id="startButton">START</button>
   </div>
+
   <audio id="hitSound" src="https://www.fesliyanstudios.com/play-mp3/387" preload="auto"></audio>
   <audio id="failSound" src="https://www.soundjay.com/button/beep-05.wav" preload="auto"></audio>
+
   <script>
+    // Narration logic
+    const narrationText =
+      "Your signal is out of sync.\nCan you press at just the right moment?\nLet your timing connect you across the static.";
+    function typeNarration(text, cb) {
+      const el = document.getElementById('narration');
+      el.textContent = "";
+      let i = 0;
+      function type() {
+        if (i < text.length) {
+          el.textContent += text[i++];
+          setTimeout(type, text[i-1] === "\n" ? 200 : 28);
+        } else if (cb) {
+          cb();
+        }
+      }
+      type();
+    }
+    typeNarration(narrationText);
+
+    // Skip button logic
+    document.getElementById('skipBtn').onclick = function() {
+      window.location.href = "https://estellearia.github.io/aria-messages/fragment3.html";
+    };
+
     const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
     const sound = document.getElementById("hitSound");
@@ -174,16 +193,11 @@
     const errorEl = document.getElementById("errorMessage");
     const overlay = document.getElementById("overlay");
     const startButton = document.getElementById("startButton");
-    const roundEl = document.getElementById("round");
-    const instructionEl = document.getElementById("instruction");
-    const skipBtn = document.getElementById("skipBtn");
 
-    // More difficult rounds: faster speed, more arrows, smaller "hit window"
     const rounds = [
-      { speed: 2.1, arrows: 6, hitWindow: 15 },
-      { speed: 2.7, arrows: 8, hitWindow: 11 },
-      { speed: 3.35, arrows: 11, hitWindow: 9 },
-      { speed: 4.25, arrows: 13, hitWindow: 7 }
+      { speed: 1.5, arrows: 5 },
+      { speed: 2.2, arrows: 7 },
+      { speed: 3, arrows: 9 }
     ];
 
     let currentRound = 0;
@@ -191,7 +205,7 @@
     let frame = 0;
     let hits = 0;
     let total = 0;
-    let playing = false;
+    let playing = false; // start false so arrows don't move before start
 
     function spawnArrow() {
       const side = Math.random() > 0.5 ? "left" : "right";
@@ -200,43 +214,38 @@
 
     function draw() {
       ctx.clearRect(0, 0, 400, 100);
-      // Center bar
-      ctx.fillStyle = "#fff";
-      ctx.fillRect(195, 0, 10, 100);
-      ctx.fillStyle = "#00f0ff";
-      ctx.globalAlpha = 0.13;
-      ctx.fillRect(175, 0, 50, 100);
-      ctx.globalAlpha = 1;
-      // Arrows
+      ctx.fillStyle = "white";
+      ctx.fillRect(195, 0, 10, 100); // Middle zone
+
       arrows.forEach(a => {
-        ctx.fillStyle = "#35e5f5";
+        ctx.fillStyle = "cyan";
         ctx.beginPath();
         ctx.moveTo(a.x, 50);
-        ctx.lineTo(a.x + (a.dir * -13), 40);
-        ctx.lineTo(a.x + (a.dir * -13), 60);
-        ctx.closePath();
+        ctx.lineTo(a.x + (a.dir * -10), 40);
+        ctx.lineTo(a.x + (a.dir * -10), 60);
         ctx.fill();
-        // Pixel effect tip
-        ctx.fillStyle = "#fff";
-        ctx.fillRect(a.x - 2 * a.dir, 48, 3, 5);
       });
     }
 
     function update() {
       if (!playing) return;
+
       arrows.forEach(a => a.x += a.dir * rounds[currentRound].speed);
-      // Miss condition: arrow passes center (with small buffer)
-      if (arrows.some(a => (a.dir === 1 && a.x > 200 + rounds[currentRound].hitWindow) ||
-                           (a.dir === -1 && a.x < 200 - rounds[currentRound].hitWindow))) {
+
+      // Check for missed arrows
+      if (arrows.some(a => (a.dir === 1 && a.x > 215) || (a.dir === -1 && a.x < 185))) {
         failRound();
         return;
       }
+
       arrows = arrows.filter(a => a.x > -20 && a.x < 420);
       frame++;
-      if (frame % Math.max(36, 100 - currentRound * 9) === 0 && total < rounds[currentRound].arrows) {
+
+      if (frame % 60 === 0 && total < rounds[currentRound].arrows) {
         spawnArrow();
         total++;
       }
+
       if (hits >= rounds[currentRound].arrows) {
         nextRound();
       }
@@ -253,12 +262,7 @@
       setTimeout(() => {
         currentRound++;
         if (currentRound < rounds.length) {
-          roundEl.textContent = `Round ${currentRound + 1} / ${rounds.length}`;
-          instructionEl.textContent = currentRound === 1
-            ? "Now it’s faster, and your hit window is smaller…"
-            : currentRound === 2
-            ? "Wow, you’re really syncing up—let’s go even harder!"
-            : "Final round! Can you keep up with the signal?";
+          document.getElementById("round").textContent = `Round ${currentRound + 1} / 3`;
           resetRound();
         } else {
           endGame();
@@ -272,8 +276,6 @@
       total = 0;
       frame = 0;
       playing = true;
-      errorEl.style.display = "none";
-      errorEl.textContent = "";
     }
 
     function failRound() {
@@ -281,37 +283,39 @@
       failSound.currentTime = 0;
       failSound.play();
       flashOverlay();
-      typeText("errorMessage", "Oops! Missed it—try again from the start!", 32);
+      typeText("errorMessage", "* Try again!", 40);
       setTimeout(() => {
         errorEl.textContent = "";
         errorEl.style.display = "none";
         resetRound();
-      }, 1400);
+      }, 1500);
     }
 
     function flashOverlay() {
-      overlay.style.background = "rgba(255, 0, 0, 0.23)";
+      overlay.style.background = "rgba(255, 0, 0, 0.5)";
       overlay.style.display = "flex";
       setTimeout(() => {
-        overlay.style.background = "rgba(0, 0, 0, 0.95)";
+        overlay.style.background = "rgba(0, 0, 0, 0.8)";
         overlay.style.display = "none";
       }, 200);
     }
-
+    
     function endGame() {
       canvas.style.display = "none";
-      instructionEl.style.display = "none";
-      roundEl.style.display = "none";
+      document.getElementById("instruction").style.display = "none";
+      document.getElementById("round").style.display = "none";
+
       const finalMessage = document.getElementById("finalMessage");
       finalMessage.style.opacity = "1";
       finalMessage.style.transition = "opacity 1s ease";
-      typeText("finalMessage", "You’re finally in sync!", 50, () => {
+
+      typeText("finalMessage", "You’re finally in sync!", 60, () => {
         setTimeout(() => {
           finalMessage.style.opacity = "0";
           setTimeout(() => {
-            window.top.location.href = "https://estellearia.github.io/aria-messages/fragment4.html";
-          }, 900);
-        }, 900);
+            window.location.href = "https://estellearia.github.io/aria-messages/fragment3.html";
+          }, 1000);
+        }, 1000);
       });
     }
 
@@ -334,10 +338,8 @@
 
     document.addEventListener("keydown", e => {
       if (e.code === "Space" && playing) {
-        e.preventDefault();
-        const center = arrows.find(a =>
-          Math.abs(a.x - 200) < rounds[currentRound].hitWindow
-        );
+        e.preventDefault(); // prevent scroll on space
+        const center = arrows.find(a => Math.abs(a.x - 200) < 15);
         if (center) {
           sound.currentTime = 0;
           sound.play();
@@ -349,16 +351,8 @@
 
     startButton.addEventListener("click", () => {
       overlay.style.display = "none";
-      skipBtn.style.display = "block";
       playing = true;
     });
-
-    skipBtn.addEventListener("click", () => {
-      window.top.location.href = "https://estellearia.github.io/aria-messages/fragment4.html";
-    });
-
-    // Hide skip button until game starts
-    skipBtn.style.display = "none";
 
     loop();
   </script>
